--- a/Lab2/app/src/main/res/layout/activity_main.xml
+++ b/Lab2/app/src/main/res/layout/activity_main.xml
@@ -18,33 +18,20 @@
             android:layout_width="300dp"
             android:layout_height="90dp"
             android:layout_marginStart="56dp"
-            android:layout_marginTop="192dp"
+            android:layout_marginTop="104dp"
             android:ems="10"
-            android:text="1"
             android:hint="start number"
             android:inputType="number"
+            android:text="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/endNumber"
-            android:layout_width="300dp"
-            android:layout_height="90dp"
-            android:layout_marginStart="56dp"
-            android:layout_marginTop="24dp"
-            android:ems="10"
-            android:text="100"
-            android:hint="end number"
-            android:inputType="number"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/startNumber" />
 
         <Button
             android:id="@+id/randomButton"
             android:layout_width="220dp"
             android:layout_height="60dp"
             android:layout_marginStart="96dp"
-            android:layout_marginTop="68dp"
+            android:layout_marginTop="72dp"
             android:text="Random"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/endNumber" />
@@ -54,10 +41,34 @@
             android:layout_width="198dp"
             android:layout_height="43dp"
             android:layout_marginStart="104dp"
-            android:layout_marginTop="84dp"
+            android:layout_marginTop="24dp"
             android:text="Result"
             android:textSize="100px"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/randomButton" />
+
+        <Button
+            android:id="@+id/calculator"
+            android:layout_width="207dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="24dp"
+            android:text="Calculator"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/result" />
+
+        <EditText
+            android:id="@+id/endNumber"
+            android:layout_width="300dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="20dp"
+            android:ems="10"
+            android:hint="end number"
+            android:inputType="number"
+            android:text="100"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/startNumber" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
